# AWS-Auth-Handler-PlayBook

./: .env.example  .gitignore  README.md  ai-model.py  app.py  main.py  pyproject.toml  requirements.txt
