[project]
name = "AWS-Auth-Handler-PlayBook"
version = "0.1.0"
description = "AWS Auth Handler PlayBook Example"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aws-auth-handler",
]

[tool.uv.sources]
aws-auth-handler = { git = "https://github.com/sirrupesh/AWS-Auth-Handler.git" }
